# Copyright 2022 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../build_overrides/gpgmm_overrides_with_defaults.gni")

import("${gpgmm_root_dir}/build_overrides/gpgmm_features.gni")

group("samples") {
  deps = []
  if (gpgmm_enable_d3d12) {
    deps = [
      ":D3D12Sample",
      ":D3D12SampleMVI",
    ]
  }
}

executable("D3D12Sample") {
  deps = [ "${gpgmm_root_dir}:gpgmm" ]
  sources = [ "D3D12Sample.cpp" ]
  libs = [
    "d3d12.lib",
    "dxgi.lib",
  ]
}

source_set("gpgmm_mvi") {
  sources = [
    "${gpgmm_root_dir}/src/mvi/gpgmm.cpp",
    "${gpgmm_root_dir}/src/mvi/gpgmm.h",
    "${gpgmm_root_dir}/src/mvi/gpgmm_d3d12.cpp",
    "${gpgmm_root_dir}/src/mvi/gpgmm_d3d12.h",
  ]
  include_dirs = [ "${gpgmm_root_dir}/include" ]
}

executable("D3D12SampleMVI") {
  deps = [ ":gpgmm_mvi" ]
  defines = [ "GPGMM_DX_HEADERS_ALREADY_INCLUDED" ]
  sources = [ "D3D12Sample.cpp" ]
  include_dirs = [ "${gpgmm_root_dir}/include" ]
  libs = [
    "d3d12.lib",
    "dxgi.lib",
  ]
}
